--- a/index.html
+++ b/index.html
@@ -6,39 +6,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Piano</h1>
+    <div class="container card mt-5 shadow-sm rounded-5">
+      <h1 class="text-success">Piano</h1>
       <div class="movie-container">
+        <!--card body-->
         <div class="movie card">
           <div class="card-body key" data-note="C">
             <h5 class="card-title">C</h5>
+            <p class="card-text">A</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Cs">
+            <h5 class="card-title">C#</h5>
+            <p class="card-text">W</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="D">
+            <h5 class="card-title">D</h5>
+            <p class="card-text">S</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Ds">
+            <h5 class="card-title">Eb</h5>
+            <p class="card-text">E</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="E">
+            <h5 class="card-title">E</h5>
             <p class="card-text">D</p>
           </div>
         </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="F">
+            <h5 class="card-title">F</h5>
+            <p class="card-text">F</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Fs">
+            <h5 class="card-title">F#</h5>
+            <p class="card-text">R</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="G">
+            <h5 class="card-title">G</h5>
+            <p class="card-text">G</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Gs">
+            <h5 class="card-title">G#</h5>
+            <p class="card-text">T</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="A">
+            <h5 class="card-title">A</h5>
+            <p class="card-text">H</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="As">
+            <h5 class="card-title">Bb</h5>
+            <p class="card-text">Y</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="B">
+            <h5 class="card-title">B</h5>
+            <p class="card-text">J</p>
+          </div>
+        </div>
+        <!--card body end-->
       </div>
     </div>
-    <input id="rate" type="range" min="0.25" max="10" value="1" style="display: none;"/>
+    <input
+      id="rate"
+      type="range"
+      min="0.25"
+      max="10"
+      value="1"
+      class="d-none"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
     <script src="main.js"></script>
