restyling and some new update

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container card mt-5 shadow-sm rounded-5">
       <h1 class="text-success">Piano</h1>
+      <p>Use arrow key left and right to change pitch</p>
       <div class="movie-container">
         <!--card body-->
         <div class="movie card">
