updating the sound, keys and style

--- a/index.html
+++ b/index.html
@@ -14,87 +14,159 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container card mt-5 shadow-sm rounded-5">
+    <div class="container-fluid card mt-5 me-5 shadow-sm rounded-5 p-4">
       <h1 class="text-success">Piano</h1>
       <p>Use arrow key left and right to change pitch</p>
       <div class="movie-container">
         <!--card body-->
-        <div class="movie card mb-5 ms-5">
+        <div class="movie card">
           <div class="card-body key" data-note="C">
             <h5 class="card-title">C</h5>
-            <p class="card-text">A</p>
+            <p class="card-text">Q</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="Cs">
             <h5 class="card-title">C#</h5>
-            <p class="card-text">W</p>
+            <p class="card-text">1</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="D">
             <h5 class="card-title">D</h5>
-            <p class="card-text">S</p>
+            <p class="card-text">W</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="Ds">
             <h5 class="card-title">Eb</h5>
-            <p class="card-text">E</p>
+            <p class="card-text">2</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="E">
             <h5 class="card-title">E</h5>
-            <p class="card-text">D</p>
+            <p class="card-text">E</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="F">
             <h5 class="card-title">F</h5>
-            <p class="card-text">F</p>
+            <p class="card-text">R</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="Fs">
             <h5 class="card-title">F#</h5>
-            <p class="card-text">R</p>
+            <p class="card-text">3</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="G">
             <h5 class="card-title">G</h5>
-            <p class="card-text">G</p>
+            <p class="card-text">T</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="Gs">
             <h5 class="card-title">G#</h5>
-            <p class="card-text">T</p>
+            <p class="card-text">4</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="A">
             <h5 class="card-title">A</h5>
-            <p class="card-text">H</p>
+            <p class="card-text">Y</p>
           </div>
         </div>
         <div class="movie card">
           <div class="card-body key" data-note="As">
             <h5 class="card-title">Bb</h5>
-            <p class="card-text">Y</p>
+            <p class="card-text">5</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="B">
+            <h5 class="card-title">B</h5>
+            <p class="card-text">U</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="C2">
+            <h5 class="card-title">C2</h5>
+            <p class="card-text">I</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Cs2">
+            <h5 class="card-title">C#2</h5>
+            <p class="card-text">6</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="D2">
+            <h5 class="card-title">D2</h5>
+            <p class="card-text">O</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Ds2">
+            <h5 class="card-title">Eb2</h5>
+            <p class="card-text">7</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="E2">
+            <h5 class="card-title">E2</h5>
+            <p class="card-text">P</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="F2">
+            <h5 class="card-title">F2</h5>
+            <p class="card-text">Z</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Fs2">
+            <h5 class="card-title">F#2</h5>
+            <p class="card-text">A</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="G2">
+            <h5 class="card-title">G2</h5>
+            <p class="card-text">X</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="Gs2">
+            <h5 class="card-title">G#2</h5>
+            <p class="card-text">S</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="A2">
+            <h5 class="card-title">A2</h5>
+            <p class="card-text">C</p>
+          </div>
+        </div>
+        <div class="movie card">
+          <div class="card-body key" data-note="As2">
+            <h5 class="card-title">Bb2</h5>
+            <p class="card-text">D</p>
           </div>
         </div>
         <div class="movie card me-5">
-          <div class="card-body key" data-note="B">
-            <h5 class="card-title">B</h5>
-            <p class="card-text">J</p>
+          <div class="card-body key" data-note="B2">
+            <h5 class="card-title">B2</h5>
+            <p class="card-text">V</p>
           </div>
         </div>
         <!--card body end-->
       </div>
     </div>
-    <div>Pitch : <span id="pitch">0.25</span></div>
+    <div class="m-xxl-5">Pitch : <span id="pitch">1</span></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
